# voidstar

./: Cargo.toml  Makefile  boot1.asm  boot2.asm  i686-custom.json  link.ld  nm.out  objdump.out  readme.md
asm/i386/: getreg.asm
src/: .lib.rs.swp  .screen.rs.swp  lib.rs  screen.rs  video.rs
src/i386/: mod.rs
startup/i386/: boot1.asm  boot3.asm  gdt_dummy.asm
